# teensy_template

./: .gitmodules  CMakeLists.txt  README.md
doc/: 1_quickstart.dox  CMakeLists.txt  Doxyfile  main.dox
src/: main.cpp
src/module1/: module1.cpp  module1.hpp
test/: CMakeLists.txt  module1_tests.cpp
